fixed 404 page bug by removing 'visibility : hidden' on layout.scss module + added responsiveness to 404 page.

--- a/src/layouts/layout.module.scss
+++ b/src/layouts/layout.module.scss
@@ -1,7 +1,7 @@
 @import "../breakpoints/breakpoints";
-.app {
-  visibility: hidden;
-}
+// .app {
+//   visibility: hidden;
+// }
 .container {
   max-width: 1440px;
   width: 100%;
